--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Task 3</title>
   </head>
   <body>
-    <h1>My fourth task</h1>
+    <h1>My fifth task</h1>
     <script src="./js/task-1.js"></script>
     <script src="./js/task-2.js"></script>
     <script src="./js/task-3.js"></script>
+    <script src="./js/task-4.js"></script>
   </body>
 </html>
